# ChangeLog for sys-kernel/pf-sources
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.29 2011/06/24 14:57:17 hwoarang Exp $

*pf-sources-2.6.39_p3 (24 Jun 2011)

  24 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  -pf-sources-2.6.39_p2.ebuild, +pf-sources-2.6.39_p3.ebuild:
  Version bump. Remove previous ebuild since the BFS squeduler contained a
  number of regressions and bugs.
  http://ck-hack.blogspot.com/2011/06/2639-bfs-test-9-is-this-one.html and
  http://ck-hack.blogspot.com/2011/05/2639-bfs-progress.html

*pf-sources-2.6.39_p2 (04 Jun 2011)

  04 Jun 2011; Markos Chandras <hwoarang@gentoo.org>
  +pf-sources-2.6.39_p2.ebuild:
  Version bump

*pf-sources-2.6.39_p1 (01 Jun 2011)

  01 Jun 2011; Alex Alexander <wired@gentoo.org> -pf-sources-2.6.38_p4.ebuild,
  -pf-sources-2.6.38_p5.ebuild, -pf-sources-2.6.38_p6.ebuild,
  +pf-sources-2.6.39_p1.ebuild:
  version bump, removed old

*pf-sources-2.6.38_p8 (12 May 2011)

  12 May 2011; Markos Chandras <hwoarang@gentoo.org>
  +pf-sources-2.6.38_p8.ebuild:
  Version bump

*pf-sources-2.6.38_p7 (04 May 2011)

  04 May 2011; Alex Alexander <wired@gentoo.org> +pf-sources-2.6.38_p7.ebuild:
  version bump

  26 Apr 2011; Alex Alexander <wired@gentoo.org> pf-sources-2.6.38_p4.ebuild,
  pf-sources-2.6.38_p5.ebuild, pf-sources-2.6.38_p6.ebuild:
  removed experimental USE from 2.6.38. bug #364729

*pf-sources-2.6.38_p6 (23 Apr 2011)

  23 Apr 2011; Alex Alexander <wired@gentoo.org> +pf-sources-2.6.38_p6.ebuild:
  version bump

*pf-sources-2.6.38_p5 (22 Apr 2011)

  22 Apr 2011; Alex Alexander <wired@gentoo.org> -pf-sources-2.6.38_p1.ebuild,
  -pf-sources-2.6.38_p2.ebuild, -pf-sources-2.6.38_p3.ebuild,
  +pf-sources-2.6.38_p5.ebuild:
  version bump, cleanup

*pf-sources-2.6.38_p4 (16 Apr 2011)

  16 Apr 2011; Alex Alexander <wired@gentoo.org> +pf-sources-2.6.38_p4.ebuild:
  version bump
