@@ -41,6 +41,7 @@ DIST patch-2.6.38-pf7.bz2 362255 RMD160 19fbb095166932121d990d4fde39c93b95db0482
 DIST patch-2.6.38-pf8.bz2 373278 RMD160 e5dcf139171e272ef04f18e52025410e5e78fff2 SHA1 cbcbd3f498e61c5522ec2207fd3609c3a12573a7 SHA256 9067998dd697d8d4acc272c0f4fd400e93ea74cdc3a5a06a32ff9d0d2cef3bbb
 DIST patch-2.6.39-pf1.bz2 243830 RMD160 09ffdf950e06c0287339b3b11bdf551d5a30a6a3 SHA1 67b880feaedfd9afb2b481c59216519d3bb74267 SHA256 02f5ee1fd46eb062fe7e9412d363190ee83aa8c0cd1f93b075e6b727f2e696d8
 DIST patch-2.6.39-pf3.bz2 323960 RMD160 0c6f9989cfb7e2bfa965f367f816e496ff75cee4 SHA1 d6a4eab89c5960f9a1356d5b770337da12c25454 SHA256 ba150b5216dd4f818583efd65d093cca27d10c8fb5a30340589cb73567a9b215
+DIST patch-2.6.39-pf4.bz2 351707 RMD160 6f317c3a525d8dacc475e7b0f2713a2e5604dccf SHA1 7c8bea6334eaed162c12edf0b40376094945db2e SHA256 c1e977b6b12dd5b0fc110bb2bd1dc98416e656bb95c445e0995182ad9766adbb
 EBUILD pf-sources-2.6.31_p9.ebuild 1426 RMD160 f463b33f7313e94810efa0d36025cca30fea993d SHA1 ec89e31caa1c8c12806c1a275f0d99c6b7d41b3f SHA256 8948cd971b922eefb4839abe2af9123f0882ac8de99140cfe63355dd3bd23339
 EBUILD pf-sources-2.6.32_p16.ebuild 1427 RMD160 1e32f053e98df9976f5ed7ef758e1db6c03b9f6b SHA1 cd417bd4a85b13afdda7aeae44797b87956f742b SHA256 de96551962fca91398bc3ef1442bf6781b6f9da819d909fdba05b6445aff6c33
 EBUILD pf-sources-2.6.33_p4.ebuild 1426 RMD160 532cc46ef2708ff714eb68dbe92fbc4b7ba60492 SHA1 d8e503fa742dbacf0308efb10b840456cea975da SHA256 d8aedff62d1be226ef56e8118e9e7b5f3356e40071bdd1e85e12e097e9cafb3f
@@ -55,22 +56,23 @@ EBUILD pf-sources-2.6.38_p7.ebuild 1841 RMD160 da9694cc006f0cb1baddd65d47cc10989
 EBUILD pf-sources-2.6.38_p8.ebuild 1844 RMD160 5ced551deed5c61fe613d4e76740ba614d9c3945 SHA1 14664990548ae892d830f85feb488551e1721253 SHA256 9bcc58d78f19e0d96404ddcc61af32f39f08110ab8e7fada4cc066aa0780d26a
 EBUILD pf-sources-2.6.39_p1.ebuild 1841 RMD160 10bc87de516d6a89ec8b8687c198522745724c60 SHA1 3648d254072aa8e37a2f028489c521a23fed54bd SHA256 d584d362f8b19cd7a1d286965db2f9c2ffed61e07bd2d48d56d5f4346662f125
 EBUILD pf-sources-2.6.39_p3.ebuild 1844 RMD160 40a547b4c64a3437946dfb6d0d0889547425c9a8 SHA1 5b7e9372ff1c0669d4c62346f3ba4fc7b96c2690 SHA256 669d2704cfa68b3df901385efc873677a2eecba7fbe3acb9f0c92bcc28fcb248
-MISC ChangeLog 5735 RMD160 49d04a78159dd903642c0617e0d99c60278bfea7 SHA1 8e37fb9bb1c64fa71cd50f3bbfc83b45821af183 SHA256 010bcccfba03476f63984f47a32ad90a817a0d5eb69d464b9e46993fdbc8514b
+EBUILD pf-sources-2.6.39_p4.ebuild 1841 RMD160 60cf7a1f8eaaf9b15cb3c4ef9c0dbe115d72c22c SHA1 51d100d434a05ddc6bcd22e34227f82fdbe4f529 SHA256 07d2414edcf61e268051d9ee9b8d38bbb34940e76453f148480280efd2781e13
+MISC ChangeLog 5864 RMD160 f724a25faaedbca3597b04cfb94fd7b80e435aee SHA1 1d52c9e05bf5f946cd31cf64d7405008750a33b0 SHA256 b8d9fd2dbdc1ab8850bd4aed7cea22e6c85cf1459225cf9a40abf63a8bf164a1
 MISC metadata.xml 639 RMD160 66491ffb8f63de4c2280660539b9511da00d6c06 SHA1 95130297611287e074688def020cb1d9a585165a SHA256 ffdfe973ba8a5673cfc8f68c85438d7c0129d85930b48013e6901a37b936bb15
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQIcBAEBCgAGBQJOBKWBAAoJEPqDWhW0r/LChJ4P/iiNHZlqsrRY7t6dKfl8aNY3
-5hvbmRLbhKaXtyUU5UWMmLmv72PxxCEgYdz86YVRWJQi4SD+Ee+knU9oQkn03cPw
-2W5iZp0wLBLIAwjBXgTY//qMp/7NprtlTyrENTB/gSOblCsMwEPNeE4ecWRQFS6A
-6g466zDt+fruEKROUooCvXsW87LaL5dmp7mFgA4xc4HcWr/Hey7MtLRv15vMLELd
-YRgRfgUFn2FCjoJ3PqqaWyh1pBmo+92+zsqwKzwgjsjjn0DBzb73GTzMjzURKPVn
-8WnXcEWEz9zIKj092KFw8EA54Hew5nV/vPGcgTUiAWkTmP5iUpAThLs6KkYTgez/
-E6/kyD2BLweGEF+Cy8Evqxqk5z3xTeRbij/Yg7V3waYVfCSqoIGcEFNARjdmdt2g
-DjcTDyxmn2N7n0AAcFJ4pkByyu5k6CmNI36M5FbG025laml6rILC4ghl0Clp6aLK
-2L8f+uYZGKTowW0/Vjvb26huFsxHFIqo7Gjbx5fOrl1qStZ/vD80LH6l0YcFquZh
-V4bedqkfGVUL/ijDyWJXrHy/MxzY/6zP6CCED/RLwT6JCOykcClGSJ9lxdWfL1Cm
-ZFYBHfC2o5T3I2Fwm6NvtdEIWGEE9GvX6TBPrsTJ9Xz+tkPR5JJjfR1nGtO7Hpje
-3Ajamz3TKI1R64kL6P9H
-=ujIX
+iQIcBAEBCgAGBQJOHUbDAAoJEDZF8K7rm0r6nSIQAI66jBwRKFQ9xnLdn6Qf+YQb
+M4TdvOVsXVPNZkOUTIZZA8AJiYtPU1+GUq44oy4BGFdVH4vQ7pkgC3hq5SGEIomY
+Gs4nXuNuew/FOyH2HVC+zQ2RA5G7jZ5GS/8ow7s0+xRhI0zY5+9s9Fkb9QOyyx+o
+GgNrZqWB7WBtvApH6/u6f9AIwM3FK+w3Of7v5MHF2/y08cfoRpRXuKyFXIAkhApz
+VrW9pEmhWkL30rTh2eEH07iaAWPDFb/0vm9eIQJ16ReMvGkXI1dsVbCT9JyBJaQk
+5MQqUuG96BuXADqqKFAjzn5dIdam4LtbL1jwo7laTS5Vn25lQrVcrTHNDhs5nQps
+0RMwNrgupPq3st9d6MZpnbHniWqsdivMaUPmeFDntNF6ocr2V1NYiMEAF1l9YZHk
+lGpWHAntPKBPMYSYzeQnGvvFZTURpBeTRm6V58M3ba5Ma8dJ0K2fIEWn3WFfNLCY
+Nm4wbqwxIg/IDYAqSxFN71kjTLPdwltWaQZKNzQxqhXZ/1Rsib2vD2JfHRRN6Meg
+v1LDPHEybeOCjpVVzc/GsjC5GodI0MANb9bscwCqy+/NAN/TwH8tOon5pTWVqkOu
+pgo3ulGCzyM9thp18RXYx98TJ0S2dL/AtzOUtMEALAjjI9gyze3c5JjrXAeQZobD
+s3ey9MZ2irS4xXli9Gn2
+=gZEI
 -----END PGP SIGNATURE-----
