@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/pf-sources
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.29 2011/06/24 14:57:17 hwoarang Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/pf-sources/ChangeLog,v 1.30 2011/07/13 07:18:01 wired Exp $
+
+*pf-sources-2.6.39_p4 (13 Jul 2011)
+
+  13 Jul 2011; Alex Alexander <wired@gentoo.org> +pf-sources-2.6.39_p4.ebuild:
+  version bump
 
 *pf-sources-2.6.39_p3 (24 Jun 2011)
 
